[metadata]
name = spotipy-detector
author = Martin Weigert, Albert Dominguez Mantes
author_email = martin.weigert@epfl.ch, albert.dominguezmantes@epfl.ch
license = BSD 3-Clause License
description = Accurate and efficient spot detection with CNNs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maweigert/spotipy
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
[options]
packages = find:
install_requires =
    numpy
    scipy
    tqdm
    tifffile
    imageio
    scikit-image
    csbdeep
    stardist

python_requires = >=3.6

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-mock

[flake8]
ignore = E116, E501, E203
